[gd_scene load_steps=6 format=2]

[ext_resource path="res://res/sounds/sound_044.wav" type="AudioStream" id=1]
[ext_resource path="res://res/img/balls.png" type="Texture" id=2]
[ext_resource path="res://res/sounds/sound_047.wav" type="AudioStream" id=3]
[ext_resource path="res://Pusher.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[node name="Pusher" type="RigidBody2D"]
collision_layer = 11
collision_mask = 0
mass = 0.2
gravity_scale = 0.0
contacts_reported = 3
contact_monitor = true
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 46, 14, 4, 6 )

[node name="ShootSoundPlayer" type="AudioStreamPlayer2D" parent="Sprite"]
stream = ExtResource( 1 )
autoplay = true

[node name="HitSoundPlayer" type="AudioStreamPlayer2D" parent="Sprite"]
stream = ExtResource( 3 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Pusher_body_entered"]
[connection signal="finished" from="Sprite/HitSoundPlayer" to="." method="_on_HitSoundPlayer_finished"]
